changed styling of nav bar removed boot strap components

--- a/src/components/desktop/desktop.css
+++ b/src/components/desktop/desktop.css
@@ -6,6 +6,7 @@
     background-size: 100%;
     background-color: black;
     height: 100vh;
+    font-family: 'Roboto', sans-serif;
     
 }
 .display-3{
