--- a/src/components/desktop/NavBar/navBar.css
+++ b/src/components/desktop/NavBar/navBar.css
@@ -13,9 +13,7 @@
 .white{
     color: darkgray;
 }
-.black{
-    color: midnightblue
-}
+
 .name{
     justify-self: left;
     grid-column: 1/ 3;
@@ -24,6 +22,17 @@
     
 }
 a, a:hover, a:focus, a:active {
+    
     text-decoration: none;
     color: inherit;
+}
+a:hover{
+
+    
+    transition: all 0.3s ease;
+  
+    font-size: 1.5rem;
+    padding: 5px;
+    
+    
 }
