--- a/src/components/desktop/desktop.css
+++ b/src/components/desktop/desktop.css
@@ -7,7 +7,7 @@
     background-color: black;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
-    
+    color:  #ffa500;
 }
 .display-3{
     margin-top: 150px;
@@ -28,4 +28,41 @@
     position: absolute;
     bottom: 15px;
     left: 48%;
+    }
+    @keyframes move-clouds-back {
+        from {background-position:0 0;}
+        to {background-position:10000px 0;}
+    }
+    @-webkit-keyframes move-clouds-back {
+        from {background-position:0 0;}
+        to {background-position:10000px 0;}
+    }
+    @-moz-keyframes move-clouds-back {
+        from {background-position:0 0;}
+        to {background-position:10000px 0;}
+    }
+    @-ms-keyframes move-clouds-back {
+        from {background-position: 0;}
+        to {background-position:10000px 0;}
+    }
+    .stars, .twinkling, .clouds {
+        position:absolute;
+        top:0;
+        left:0;
+        right:0;
+        bottom:0;
+        width:100%;
+        height:100%;
+        display:block;
+      }    
+
+      .clouds{
+        background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
+        z-index:3;
+    
+      -moz-animation:move-clouds-back 200s linear infinite;
+      -ms-animation:move-clouds-back 200s linear infinite;
+      -o-animation:move-clouds-back 200s linear infinite;
+      -webkit-animation:move-clouds-back 200s linear infinite;
+      animation:move-clouds-back 200s linear infinite;
     }
